infrastructure/kubernetes/backstage/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: backstage
  labels:
    name: backstage
    purpose: developer-portal
    platform: cnoe
